--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,7 +16,7 @@
         "ms-azuretools.vscode-docker",
         "manishsencha.readme-preview",
         "wix.vscode-import-cost",
-        "j0hnm4r5.laser-theme"
+        "jbelford.cyberpunk-plus"
       ]
     }
   }
