--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "workbench.colorTheme": "Lasers",
+  "workbench.colorTheme": "Cyberpunk+",
   "editor.tabSize": 2,
   "editor.formatOnSave": false,
   "remote.forwardOnOpen": false
