--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "scriptures-inspector",
   "version": "0.0.0",
   "scripts": {
-    "start": "ng serve",
+    "dev": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
